--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>goit-markup-hw-02</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
@@ -26,13 +29,80 @@
         <a class="header-contact" href="tel:+380961111111">+38 096 111 11 11</a>
        </header>
        <main>
-        <nav>
-           <button type="button">Усі</button>
-           <button type="button">Веб-сайти</button>
-           <button type="button">Додатки</button>
-           <button type="button">Дизайн</button>
-           <button type="button">Маркетинг</button>
+        <nav class="portfolio-nav">
+           <button class="portfolio-nav-btn" type="button">Усі</button>
+           <button class="portfolio-nav-btn" type="button">Веб-сайти</button>
+           <button class="portfolio-nav-btn" type="button">Додатки</button>
+           <button class="portfolio-nav-btn" type="button">Дизайн</button>
+           <button class="portfolio-nav-btn" type="button">Маркетинг</button>
         </nav>
-       
+       <ul>
+        <li>
+            <img src="./images/img-4.jpg" width="370" height="294" alt="Технокряк">
+            <h3 class="project-title">Технокряк</h3>
+            <p class="project-subtitle">Веб-сайт</p>
+        </li>
+        <li>
+            <img src="./images/img-5.jpg" width="370" height="294" alt="Технокряк">
+            <h3 class="project-title">Постер New Orlean vs Golden Star</h3>
+            <p class="project-subtitle">Дизайн</p>
+        </li>
+        <li>
+            <img src="./images/img-6.jpg" width="370" height="294" alt="Технокряк">
+            <h3 class="project-title">Ресторан Seafood</h3>
+            <p class="project-subtitle">Додаток</p>
+        </li>
+        <li>
+            <img src="./images/img-7.jpg" width="370" height="294" alt="Технокряк">
+            <h3 class="project-title">Проєкт Prime</h3>
+            <p class="project-subtitle">Маркетинг</p>
+        </li>
+        <li>
+            <img src="./images/img-8.jpg" width="370" height="294" alt="Технокряк">
+            <h3 class="project-title">Проєкт Boxes</h3>
+            <p class="project-subtitle">Додаток</p>
+        </li>
+        <li>
+            <img src="./images/img-9.jpg" width="370" height="294" alt="Технокряк">
+            <h3 class="project-title">Inspiration has no Borders</h3>
+            <p class="project-subtitle">Веб-сайт</p>
+        </li>
+        <li>
+            <img src="./images/img-10.jpg" width="370" height="294" alt="Технокряк">
+            <h3 class="project-title">Видання Limited Edition</h3>
+            <p class="project-subtitle">Дизайн</p>
+        </li>
+        <li>
+            <img src="./images/img-11.jpg" width="370" height="294" alt="Технокряк">
+            <h3 class="project-title">Проєкт LAB</h3>
+            <p class="project-subtitle">Маркетинг</p>
+        </li>
+        <li>
+            <img src="./images/img-12.jpg" width="370" height="294" alt="Технокряк">
+            <h3 class="project-title">Growing Business</h3>
+            <p class="project-subtitle">Додаток</p>
+        </li>
+       </ul>
        </main>
+       <footer>
+        <a href="/" class="logo-blue">
+            Web
+        </a>
+        <a href="/" class="logo-white">
+        Studio
+        </a>
+        <ul>
+            <li>
+                <a class="footer-address" href="https://goo.gl/maps/BFyCaRRbE5G7Gjye8" target="_blank" rel="noopener noreferrer">м. Київ, пр-т Лесі Українки, 26</a>
+            </li>
+            <li>
+                <a class="footer-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li>
+                <a class="footer-contact" href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
+        </ul>
+       </footer>
+
 </body>
+</html>
