--- a/index.html
+++ b/index.html
@@ -13,11 +13,8 @@
 <body>
    <header class="header"> 
     <a href="./index.html" class="logo-blue">
-        Web
-    </a>
-    <a href="./index.html" class="logo-black">
-    Studio
-    </a>
+        Web<span class="logo-black">Studio</span>
+    </a> 
     <nav>
       <ul class="header-nav">
         <li><a class="header-nav-link" href="#">Студія</a></li>
@@ -37,25 +34,25 @@
         <ul class="links">
             <li class="section">
                 <h3 class="section-title">УВАГА ДО ДЕТАЛЕЙ</h3>
-                <p>
+                <p class="section-subtitle">
                     Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
                 </p>
             </li>
             <li class="section">
                 <h3 class="section-title">ПУНКТУАЛЬНІСТЬ</h3>
-                <p>
+                <p class="section-subtitle">
                     Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
                 </p>
             </li>
             <li class="section">
                 <h3 class="section-title">ПЛАНУВАННЯ</h3>
-                <p>
+                <p class="section-subtitle">
                     Так само консультація з широким активом значною мірою зумовлює.
                 </p>
             </li>
             <li class="section">
                 <h3 class="section-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                <p>
+                <p class="section-subtitle">
                     Значимість цих проблем настільки очевидна, що реалізація планових завдань.
                 </p>
             </li>
@@ -81,33 +78,30 @@
             <li>
                 <img src="./images/product-manager.jpg" width="270" height="260" alt="Ігор Дем'яненко">
                 <h3 class="second-sub-name">Ігор Дем'яненко</h3>
-                <p>Product Designer</p>
+                <p class="second-sub-position">Product Designer</p>
             </li>
             <li>
                 <img src="./images/frontend.jpg" width="270" height="260" alt="Ольга Рєпіна">
                 <h3 class="second-sub-name">Ольга Рєпіна</h3>
-                <p>Frontend Developer</p>
+                <p class="second-sub-position">Frontend Developer</p>
             </li>
             <li>
                 <img src="./images/marketing.jpg" width="270" height="260" alt="Микола Тарасов">
                 <h3 class="second-sub-name">Микола Тарасов</h3>
-                <p>Marketing</p>
+                <p class="second-sub-position">Marketing</p>
             </li>
             <li>
                 <img src="./images/ui.jpg" width="270" height="260" alt="Михайло Єрмаков">
                 <h3 class="second-sub-name">Михайло Єрмаков</h3>
-                <p>UI Designer</p>
+                <p class="second-sub-position">UI Designer</p>
             </li>
         </ul>
     </section>
    </main>
    <footer>
-    <a href="/" class="logo-blue">
-        Web
-    </a>
-    <a href="/" class="logo-white">
-    Studio
-    </a>
+    <a href="./index.html" class="logo-blue">
+        Web<span class="logo-black">Studio</span>
+    </a> 
     <ul>
         <li>
             <a class="footer-address" href="https://goo.gl/maps/BFyCaRRbE5G7Gjye8" target="_blank" rel="noopener noreferrer">м. Київ, пр-т Лесі Українки, 26</a>
