--- a/portfolio.html
+++ b/portfolio.html
@@ -12,12 +12,9 @@
 </head>
 <body>
     <header class="header"> 
-        <a href="/" class="logo-blue">
-            Web
-        </a>
-        <a href="/" class="logo-black">
-        Studio
-        </a>
+        <a href="./index.html" class="logo-blue">
+            Web<span class="logo-black">Studio</span>
+        </a> 
         <nav>
           <ul class="header-nav">
             <li><a class="header-nav-link" href="#">Студія</a></li>
@@ -29,13 +26,13 @@
         <a class="header-contact" href="tel:+380961111111">+38 096 111 11 11</a>
        </header>
        <main>
-        <nav class="portfolio-nav">
-           <button class="portfolio-nav-btn" type="button">Усі</button>
-           <button class="portfolio-nav-btn" type="button">Веб-сайти</button>
-           <button class="portfolio-nav-btn" type="button">Додатки</button>
-           <button class="portfolio-nav-btn" type="button">Дизайн</button>
-           <button class="portfolio-nav-btn" type="button">Маркетинг</button>
-        </nav>
+        <ul class="portfolio-nav">
+          <li><button class="portfolio-nav-btn" type="button">Усі</button></li>
+          <li><button class="portfolio-nav-btn" type="button">Веб-сайти</button></li>
+          <li><button class="portfolio-nav-btn" type="button">Додатки</button></li>
+          <li><button class="portfolio-nav-btn" type="button">Дизайн</button></li>
+          <li><button class="portfolio-nav-btn" type="button">Маркетинг</button></li>
+        </ul>
        <ul>
         <li>
             <img src="./images/img-4.jpg" width="370" height="294" alt="Технокряк">
@@ -85,12 +82,9 @@
        </ul>
        </main>
        <footer>
-        <a href="/" class="logo-blue">
-            Web
-        </a>
-        <a href="/" class="logo-white">
-        Studio
-        </a>
+        <a href="./index.html" class="logo-blue">
+            Web<span class="logo-black">Studio</span>
+        </a> 
         <ul>
             <li>
                 <a class="footer-address" href="https://goo.gl/maps/BFyCaRRbE5G7Gjye8" target="_blank" rel="noopener noreferrer">м. Київ, пр-т Лесі Українки, 26</a>
