--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
    </main>
    <footer>
     <a href="./index.html" class="logo-blue">
-        Web<span class="logo-black">Studio</span>
+        Web<span class="logo-white">Studio</span>
     </a> 
     <ul>
         <li>
