--- a/portfolio.html
+++ b/portfolio.html
@@ -32,8 +32,6 @@
           <li><button class="portfolio-nav-btn" type="button">Додатки</button></li>
           <li><button class="portfolio-nav-btn" type="button">Дизайн</button></li>
           <li><button class="portfolio-nav-btn" type="button">Маркетинг</button></li>
-        </ul>
-       <ul>
         <li>
             <img src="./images/img-4.jpg" width="370" height="294" alt="Технокряк">
             <h3 class="project-title">Технокряк</h3>
@@ -83,7 +81,7 @@
        </main>
        <footer>
         <a href="./index.html" class="logo-blue">
-            Web<span class="logo-black">Studio</span>
+            Web<span class="logo-white">Studio</span>
         </a> 
         <ul>
             <li>
